<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pebble Notifications</string>
    <string name="welcome">Welcome! Once you are setup this app will push all notifications to your Pebble. To get setup follow the following steps:</string>
    <string name="step1">First install the associated Pebble app:</string>
    <string name="install_app">Install Pebble app</string>
    <string name="step2">Now make sure this app has permission to access your devices notifications:</string>
    <string name="add_permission">Add security permission</string>
    <string name="step3">Next sent a test notification:</string>
    <string name="create_notif">Create notification</string>
    <string name="step4">If you see it on your Pebble, you\'re done, all notifications from now on will be pushed!</string>
</resources>
