<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:text="@string/welcome"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step1"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnInstallApp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="buttonClicked"
        android:text="@string/install_app" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step2"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnAddPermission"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="buttonClicked"
        android:text="@string/add_permission" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step3"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnCreateNotify"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="buttonClicked"
        android:text="@string/create_notif" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step4"
        android:textSize="18sp" />

</LinearLayout>